--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
@@ -176,7 +176,7 @@
         <button th:if="${forBatchApprovalBtn}"   id="forBatchApproval-button" class="layui-btn icon-btn  layui-btn-sm for-batch-approval-button" lay-event="forBatchApproval"> <span th:text="${lang.translate('送审')}">送审</span></button>
         <button th:if="${batchConfirmBtn}"   id="batchConfirm-button" class="layui-btn icon-btn  layui-btn-sm batch-confirm-button"               lay-event="batchConfirm"> <span th:text="${lang.translate('确认')}">确认</span></button>
         <button th:if="${batchRevokeBtn}"  id="batchRevoke-button" class="layui-btn icon-btn  layui-btn-sm batch-revoke-button"                   lay-event="batchRevoke"> <span th:text="${lang.translate('撤销')}">撤销</span></button>
-        <button th:if="${cardBtn}"    id="bills-button" class="layui-btn icon-btn layui-btn-sm card-button"                                        lay-event="bills"> <span th:text="${lang.translate('登记单')}">登记单</span></button>
+        <button th:if="${cardBtn}"    id="bills-button" class="layui-btn icon-btn layui-btn-sm card-button"                                        lay-event="bills"> <span th:text="${lang.translate('资产卡片')}">资产卡片</span></button>
         <button th:if="${labelBtn}"  id="label-button" class="layui-btn icon-btn layui-btn-sm label-button"                                       lay-event="assetLabel"><span th:text="${lang.translate('资产标签')}">资产标签</span></button>
         <button th:if="${highExportDataBtn}"   id="highExportData-button" class="layui-btn icon-btn layui-btn-sm high-export-data-button"        lay-event="highExportData"><span th:text="${lang.translate('数据导出')}">数据导出</span></button>
 
