--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
@@ -1,8 +1,8 @@
-<!-- 
+<!--
 /**
  * 机柜 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-26 15:26:51
+ * @since 2022-04-10 09:17:36
  */
  -->
  <!DOCTYPE html>
@@ -12,22 +12,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
     <title th:text="${lang.translate('机柜')}">机柜</title>
+    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon">
+    <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
-    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
-    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon"> <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
-    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/libs/material-design-webfont/css/material-design-icons-min.css" rel="stylesheet">
+    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
     </style>
+    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
 </head>
 
 <body style="overflow-y: hidden">
 
 <div class="layui-card">
- 
+
     <div class="layui-card-body" style="">
 
         <div class="search-bar" style="">
@@ -36,31 +39,75 @@
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 编码 , rackCode ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 状态 , status ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('编码')}" class="search-label rackCode-label">编码</span><span class="search-colon">:</span></div>
-                        <input id="rackCode" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('状态')}" class="search-label status-label">状态</span><span class="search-colon">:</span></div>
+                        <div id="status" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_dc_rack_status'}" style="width:150px" extraParam="{}"></div>
+                    </div>
+                    <!-- 容量 , rackCaptical ,typeName=number_input, isHideInSearch=true -->
+                    <!-- U位数量 , uPostionNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- PDU数量 , pduNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 跳线数 , jumperNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 合同电力 , contractPower ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 设备数量 , equipmentNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 标签2 , rackLabel2 ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 备注 , rackNotes ,typeName=text_area, isHideInSearch=true -->
+                    <!-- 类型 , rackType ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('类型')}" class="search-label rackType-label">类型</span><span class="search-colon">:</span></div>
+                        <div id="rackType" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_dc_rack_type'}" style="width:150px" extraParam="{}"></div>
+                    </div>
+                    <!-- 使用分类 , rackUsedType ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('使用分类')}" class="search-label rackUsedType-label">使用分类</span><span class="search-colon">:</span></div>
+                        <div id="rackUsedType" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_dc_rack_used_type'}" style="width:150px" extraParam="{}"></div>
+                    </div>
+                    <!-- 环境 , environment ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('环境')}" class="search-label environment-label">环境</span><span class="search-colon">:</span></div>
+                        <div id="environment" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_dc_rack_environment'}" style="width:150px" extraParam="{}"></div>
+                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 区域 , areaId ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('区域')}" class="search-label areaId-label">区域</span><span class="search-colon">:</span></div>
+                        <div id="areaId" th:data="${'/service-datacenter/dc-area/query-list'}" style="width:150px" extraParam="{}"></div>
+                    </div>
+                    <!-- 层级 , layerId ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('层级')}" class="search-label layerId-label">层级</span><span class="search-colon">:</span></div>
+                        <div id="layerId" th:data="${'/service-datacenter/dc-layer/query-list'}" style="width:150px" extraParam="{}"></div>
                     </div>
                     <!-- 名称 , rackName ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('名称')}" class="search-label rackName-label">名称</span><span class="search-colon">:</span></div>
-                        <input id="rackName" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('名称')}" class="search-label rackName-label">名称</span><span class="search-colon">:</span></div>
+                        <input id="rackName" class="layui-input search-input" style="width: 150px" type="text" />
                     </div>
-                    <!-- 容量 , rackCaptical ,typeName=number_input, isHideInSearch=true -->
-                    <!-- PDU数量 , pduNumber ,typeName=number_input, isHideInSearch=false -->
+                    <!-- 标签1 , rackLabel1 ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('PDU数量')}" class="search-label pduNumber-label">PDU数量</span><span class="search-colon">:</span></div>
-                            <input id="pduNumber" class="layui-input search-input" style="width: 140px" type="text" autocomplete="off" input-type="number_input" integer="true" decimal="false" allow-negative="true" step="1.0" min-value="" max-value="" scale="0"/>
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('标签1')}" class="search-label rackLabel1-label">标签1</span><span class="search-colon">:</span></div>
+                        <input id="rackLabel1" class="layui-input search-input" style="width: 150px" type="text" />
                     </div>
-                    <!-- 标签 , rackLabels ,typeName=text_input, isHideInSearch=false -->
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 到期日期 , expireDate ,typeName=date_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('标签')}" class="search-label rackLabels-label">标签</span><span class="search-colon">:</span></div>
-                        <input id="rackLabels" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('到期日期')}" class="search-label expireDate-label">到期日期</span><span class="search-colon">:</span></div>
+                            <input type="text" id="expireDate-begin" style="width: 150px" lay-verify="date" th:placeholder="${lang.translate('开始日期')}" autocomplete="off" class="layui-input search-input search-date-input"  readonly >
+                            <span class="search-dash">-</span>
+                            <input type="text" id="expireDate-end"  style="width: 150px"  lay-verify="date" th:placeholder="${lang.translate('结束日期')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
                     </div>
-                    <!-- 备注 , rackNotes ,typeName=text_area, isHideInSearch=false -->
+                    <!-- 编码 , rackCode ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('备注')}" class="search-label rackNotes-label">备注</span><span class="search-colon">:</span></div>
-                        <input id="rackNotes" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('编码')}" class="search-label rackCode-label">编码</span><span class="search-colon">:</span></div>
+                        <input id="rackCode" class="layui-input search-input" style="width: 150px" type="text" />
                     </div>
 
 
@@ -71,10 +118,11 @@
             <!-- 按钮区域 -->
             <div class="layui-form toolbar search-buttons" style="opacity: 0">
                 <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>&nbsp;&nbsp;<span th:text="${lang.translate('搜索')}">搜索</span></button>
+                <button id="search-button-advance" class="layui-btn layui-btn-primary icon-btn search-button-advance"><i class="layui-icon">&#xe671;</i><span th:text="${lang.translate('更多')}">更多</span></button>
             </div>
         </div>
 
-        <div style="margin-top: 42px ">
+        <div style="margin-top: 84px ">
             <table class="layui-table" id="data-table" lay-filter="data-table"></table>
         </div>
 
@@ -90,19 +138,19 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
-        <button th:if="${perm.checkAuth('dc_rack:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
-        <button th:if="${perm.checkAuth('dc_rack:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+        <button th:if="${perm.checkAuth('dc_rack:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button " lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button th:if="${perm.checkAuth('dc_rack:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button " lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
     </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
 
-    <button th:if="${perm.checkAuth('dc_rack:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
-    <button th:if="${perm.checkAnyAuth('dc_rack:update','dc_rack:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
+    <button th:if="${perm.checkAuth('dc_rack:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button " lay-event="view"  data-id="{{d.id}}"> <span th:text="${lang.translate('查看')}">查看</span></button>
+    <button th:if="${perm.checkAnyAuth('dc_rack:update','dc_rack:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button " lay-event="edit"data-id="{{d.id}}"><span th:text="${lang.translate('修改')}">修改</span></button>
 
 
-    <button th:if="${perm.checkAuth('dc_rack:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
+    <button th:if="${perm.checkAuth('dc_rack:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button " lay-event="del" data-id="{{d.id}}"><span th:text="${lang.translate('删除')}">删除</span></button>
 
 
 </script>
