--- a/eam/view/view-eam/src/main/resources/public/business/eam/purchase_apply/purchase_apply_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/purchase_apply/purchase_apply_form.html
@@ -2,7 +2,7 @@
 /**
  * 采购申请 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-15 05:44:47
+ * @since 2022-04-16 23:52:39
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-9908-content">
+        <div class="layui-row form-row" id="random-1642-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -111,7 +111,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-6446-content">
+        <div class="layui-row form-row" id="random-8493-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -150,6 +150,16 @@
                 <!--结束：栏次内字段循环-->
             </div>
             <!--结束：栏次输入框循环-->
+        </div>
+         <!--开始：group 循环-->
+
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-4117-fieldset">
+        <legend>订单列表</legend>
+        </fieldset>
+        <div class="layui-row form-row" style="text-align: center;" id="random-4117-content">
+            <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
+            <iframe js-fn="assetSelectOrderList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
+            </div>
         </div>
         <!--结束：group循环-->
 
