--- a/eam/view/view-eam/src/main/resources/public/business/eam/purchase_check/purchase_check_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/purchase_check/purchase_check_form.html
@@ -2,7 +2,7 @@
 /**
  * 采购验收 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-15 05:45:12
+ * @since 2022-04-16 23:19:18
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-5321-content">
+        <div class="layui-row form-row" id="random-2722-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -52,16 +52,16 @@
                     </div>
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('验收单')}">验收单</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('验收人')}">验收人</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="code" id="code" name="code" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('验收单') }" type="text" class="layui-input"  />
+                            <input lay-filter="checkUserName" id="checkUserName" name="checkUserName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('验收人') }" type="text" class="layui-input"    lay-verify="|required"  />
                         </div>
                     </div>
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('验收人')}">验收人</div><div class="layui-required">*</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('验收单')}">验收单</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="checkUserName" id="checkUserName" name="checkUserName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('验收人') }" type="text" class="layui-input"    lay-verify="|required"  />
+                            <input lay-filter="code" id="code" name="code" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('验收单') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
@@ -118,7 +118,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-8529-content">
+        <div class="layui-row form-row" id="random-5249-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -183,6 +183,8 @@
     var VALIDATE_CONFIG={"name":{"labelInForm":"名称","inputType":"text_input","required":true},"checkUserName":{"labelInForm":"验收人","inputType":"text_input","required":true},"receiveDate":{"date":true,"labelInForm":"到货日期","inputType":"date_input"},"checkDate":{"date":true,"labelInForm":"验收时间","inputType":"date_input"}};
     var AUTH_PREFIX="eam_purchase_check";
 
+    // applyId
+    var APPLY_ID = [[${applyId}]] ;
 
 </script>
 
