--- a/eam/view/view-eam/src/main/resources/public/business/eam/purchase_order/purchase_order_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/purchase_order/purchase_order_form.html
@@ -2,7 +2,7 @@
 /**
  * 采购订单 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-15 05:45:21
+ * @since 2022-04-17 01:46:38
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-4928-content">
+        <div class="layui-row form-row" id="random-4143-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -90,7 +90,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-0338-content">
+        <div class="layui-row form-row" id="random-5304-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -108,6 +108,16 @@
                 <!--结束：栏次内字段循环-->
             </div>
             <!--结束：栏次输入框循环-->
+        </div>
+         <!--开始：group 循环-->
+
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-7564-fieldset">
+        <legend>资产</legend>
+        </fieldset>
+        <div class="layui-row form-row" style="text-align: center;" id="random-7564-content">
+            <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
+            <iframe js-fn="assetSelectList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
+            </div>
         </div>
         <!--结束：group循环-->
 
@@ -136,6 +146,10 @@
     var VALIDATE_CONFIG={"name":{"labelInForm":"订单名称","inputType":"text_input","required":true},"storageType":{"labelInForm":"存放类型","inputType":"select_box","required":true},"goodsType":{"labelInForm":"物品类型","inputType":"select_box","required":true}};
     var AUTH_PREFIX="eam_purchase_order";
 
+    // selectedCode
+    var SELECTED_CODE = [[${selectedCode}]] ;
+    // applyId
+    var APPLY_ID = [[${applyId}]] ;
 
 </script>
 
