版本升级至 1.0.1

--- a/eam/common/generator/src/main/resources/templates/ControllerProxy.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ControllerProxy.java.vm
@@ -3,6 +3,7 @@ package #(package);
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.github.foxnic.web.proxy.api.APIProxy;
 import org.github.foxnic.web.proxy.FeignConfiguration;
+import org.springframework.web.bind.annotation.RequestParam;
 
 #if(isEnableMicroService)import org.springframework.cloud.openfeign.FeignClient;#end
 
